kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: study-english-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: study-english-frontend
  template:
    metadata:
      labels:
        app: study-english-frontend
    spec:
      containers:
      - name: study-english-frontend
        image: markswell/study-english-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: study-english-frontend-service
spec:
  selector:
    app: study-english-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: study-english-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: study-english-api
  template:
    metadata:
      labels:
        app: study-english-api
    spec:
      containers:
      - name: study-english-api
        image: markswell/study-english-api:latest
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: study-english-volume
          mountPath: /opt
      volumes:
      - name: study-english-volume
        hostPath:
          path: /volume
          type: DirectoryOrCreate
        
---
apiVersion: v1
kind: Service
metadata:
  name: study-english-api-service
spec:
  selector:
    app: study-english-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
